<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/outraActivityMi"
        android:title="@string/outra_activity"
        app:showAsAction="never" />
    <item
        android:title="@string/outras_intents"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/viewMi"
                android:title="@string/navegador"/>
            <item
                android:id="@+id/callMi"
                android:title="@string/liga_o"/>
            <item
                android:id="@+id/dialMi"
                android:title="@string/discador"/>
            <item
                android:id="@+id/pickMi"
                android:title="@string/pegar_arquivo"/>
            <item
                android:id="@+id/chooserMi"
                android:title="@string/escolher"/>
        </menu>
    </item>
</menu>